# soldier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_DOCS_VS_CODEBASE_REPORT_2025-12-16.md  COVERAGE_IMPROVEMENT_PLAN.md  COVERAGE_STATUS.md  FOCAL_BRAIN_SUMMARY.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  RUCHE_FOCAL_BRAIN_OVERVIEW_2025-12-15.md  coverage.json  docker-compose.yml  generate_docs.py  pydoc-markdown.yml  pyproject.toml  run_server.sh  test.ipynb  tester.ipynb
.specify codex/memory/: constitution.md
alembic/versions/: 012_add_intents_table.py
config/: .gitkeep  default.toml  development.toml  production.toml  staging.toml  test.toml
deploy/docker/: Dockerfile
deploy/kubernetes/: .gitkeep
docs/: ARCHITECTURE_READINESS_REPORT_V2.md  ARCHITECTURE_READINESS_REPORT_V3.md  ARCHITECTURE_READINESS_REPORT_V4.md  ARCHITECTURE_READINESS_REPORT_V5.md  ARCHITECTURE_READINESS_REPORT_V6.md  ARCHITECTURE_READINESS_REPORT_v1.md  DOC_UPDATE_PROGRESS.md  agno_study1 copy.md  agno_study1.md  doc_skeleton.md  vision.md
docs/Smartbeez_Integration_Study/: 00_tracking.md  01_system_map.md  02_soldier_tools_deep_dive.md  03_soldier_channels_events_webhooks.md  04_sb_agent_hub_platform_overview.md  05_sb_agent_hub_channels_agui_voice.md  06_integration_architecture_and_contracts.md  07_gap_analysis_and_workplan.md  08_appendix_file_index.md  09_integration_decision_questions.md  10_kernel_agent_deep_dive.md  README.md
docs/Smartbeez_Orchestration_Study/: 00_tracking.md  01_requirements_and_use_cases.md  02_capability_matrix.md  03_minimal_stack_recommendations.md  04_repo_alignment_and_migration.md  05_operational_notes_and_pitfalls.md  README.md
docs/Smartbeez_Repo_Component_Status/: 00_rating_scale.md  01_soldier_ruche_status.md  02_sb_agent_hub_status.md  03_kernel_agent_status.md  04_cross_repo_matrix.md  README.md
docs/Smartbeez_Voice_Integration_Study/: 00_prompt_blueprint.md  README.md
docs/acf/: README.md  WAVE_EXECUTION_GUIDE_V2.md
docs/architecture/: ACF_SCALABILITY_ANALYSIS.md  alignment-engine.md  api-layer.md  architecture_reconsideration.md  channel-gateway.md  configuration-models.md  configuration-overview.md  configuration-secrets.md  configuration-toml.md  configuration-usage-validation.md  error-handling.md  event-model.md  folder-structure.md  intent-registry.md  kernel-agent-integration.md  memory-layer.md  observability.md  overview.md  selection-strategies.md  stub-files.md  webhook-system.md
docs/design/: alignment_engine_persistence_abstraction.md  api-crud.md  customer-profile.md  data_storage_replication_note.md  domain-model.md  interlocutor-data.md  scenario-update-methods.md  turn-pipeline.md
docs/development/: client-sdk.md  testing-strategy.md  unit-testing.md
docs/focal_360/: README.md  SUBAGENT_PROTOCOL.md  WAVE_EXECUTION_GUIDE.md  WAVE_EXECUTION_GUIDE_V2.md  gap_analysis.md
docs/focal_brain/: IMPLEMENTATION_PLAN.md  README.md  SUBAGENT_PROTOCOL.md  WAVE_EXECUTION_GUIDE.md
docs/focal_turn_pipeline/: README.md  SUBAGENT_PROTOCOL.md  WAVE_EXECUTION_GUIDE.md
docs/implementation/: AGENDA_IMPLEMENTATION_REPORT.md  EVENT_MODEL_MIGRATION_PLAN.md  FOCAL_BRAIN_PHASE_COMPLIANCE_MATRIX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_WAVES.md  PARALLEL_WORK_TASKS.md  README.md  SUBAGENT_IMPLEMENTATION_PROTOCOL.md  gap-analysis.md  gemini_docs_analysis_2025-12-16.md  master-plan.md  questions.md  refactoring-plan.md  subagent-protocol.md  work-packages.md
docs/studies/: llm-executor-agno-integration.md
focal/alignment/: result.py  templates_loader.py
focal/api/: app.py  exceptions.py
focal/asa/: README.md  __init__.py
focal/client/: client.py
focal/config/: __init__.py  loader.py  settings.py
focal/customer_data/: enums.py  extraction.py  models.py  validation.py
focal/domain/: __init__.py
focal/infrastructure/: __init__.py
focal/jobs/: __init__.py
focal/mechanics/: __init__.py  protocol.py
focal/memory/: __init__.py
focal/observability/: __init__.py  logging.py  tracing.py
focal/providers/: __init__.py
focal/runtime/: __init__.py
focal/vector/: factory.py
focal_backup_20251214/: bootstrap.py
focal_backup_20251214/alignment/: __init__.py  engine.py
focal_backup_20251214/api/: dependencies.py
focal_backup_20251214/client/: __init__.py
focal_backup_20251214/customer_data/: __init__.py  store.py
focal_backup_20251214/db/: __init__.py  errors.py  pool.py
focal_backup_20251214/jobs/: client.py
focal_backup_20251214/vector/: __init__.py  embedding_manager.py
notebooks/: client_demo.py
ruche/: __init__.py  bootstrap.py
ruche/alignment/: __init__.py  engine.py  templates_loader.py
ruche/api/: __init__.py  app.py  dependencies.py  exceptions.py
ruche/asa/: __init__.py  models.py
ruche/audit/: __init__.py  store.py
ruche/brain/: __init__.py
ruche/brains/: __init__.py
ruche/client/: __init__.py  client.py
ruche/config/: __init__.py  loader.py  settings.py
ruche/conversation/: store.py
ruche/customer_data/: __init__.py  extraction.py  models.py  store.py  validation.py
ruche/db/: __init__.py  pool.py
ruche/domain/: __init__.py  glossary.py  templates.py
ruche/infrastructure/: __init__.py
ruche/interlocutor_data/: __init__.py  enums.py  extraction.py  models.py  store.py  validation.py
ruche/jobs/: __init__.py  client.py
ruche/mechanics/: __init__.py
ruche/memory/: store.py
ruche/observability/: __init__.py  metrics.py  middleware.py
ruche/pipelines/: __init__.py
ruche/providers/: __init__.py
ruche/runtime/: README.md  __init__.py
ruche/vector/: __init__.py  embedding_manager.py  factory.py
scripts/: test_vector_stores.py
soldier/: __init__.py  bootstrap.py
soldier/alignment/: __init__.py  engine.py  result.py  templates_loader.py
soldier/api/: __init__.py  app.py  dependencies.py  exceptions.py
soldier/audit/: store.py
soldier/client/: __init__.py  client.py
soldier/config/: __init__.py  loader.py  settings.py
soldier/db/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py
webdoc/: WEB_DOC_IMPROVEMENT_PLAN.md  mkdocs.yml  run_docs.sh
(+1439 files in other folders)
